--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DailyBucket</string>
     <string name="login">Log In</string>
+    <string name="password">Password</string>
+    <string name="username">Username</string>
 </resources>
