--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">DailyBucket</string>
     <string name="login">Log In</string>
-    <string name="password">Password</string>
-    <string name="username">Username</string>
+    <string name="password">password</string>
+    <string name="username">username</string>
+    <string name="firstname">First Name</string>
+    <string name="lastname">Last Name</string>
+    <string name="email">E-mail</string>
+    <string name="password1">Password</string>
+    <string name="password2">Confirm Password</string>
 </resources>
