--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="email">E-mail</string>
     <string name="password1">Password</string>
     <string name="password2">Confirm Password</string>
+    <string name="profilepic">Chose profile picture</string>
 </resources>
