--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="options">Options</string>
+    <string name="settings">Settings</string>
+    <string name="logout">LogOut</string>
 </resources>
